src/objects/Partner_Application__c.object
<CustomObject>
    <description>Partner Application - portal registration</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Organization_Type__c</fullName>
        <label>Affiliate Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact associated with this application</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Applications</relationshipLabel>
        <relationshipName>Partner_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EIN_Number__c</fullName>
        <label>EIN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Contractor/Trades - Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor/Trades - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor/Trades - Roofing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental/Efficiency Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit/Membership Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <description>Number of Members/Employees in Affiliate or Affinity Partner</description>
        <label>Number of Members</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 100 Not eligible for Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Industry__c</fullName>
        <label>Other Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Refer_By_Employee__c</fullName>
        <label>Refer By Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>How did you learn about the program?</label>
        <picklist>
            <picklistValues>
                <fullName>Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth from Another Partner (Specify Below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Direct Energy Solar Employee (Specify Below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, Please Specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Partner Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>State__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Website__c</columns>
        <columns>Status__c</columns>
        <columns>Terms_Accepted__c</columns>
        <columns>Refer_By_Employee__c</columns>
        <columns>Phone__c</columns>
        <columns>Partner_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Declined</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partner_Application_Queue</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Partner Application Queue</label>
        <language>en_US</language>
        <queue>Partner_Application_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Partner Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>